# FlyHard

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE  README.md  config.hpp.in  generate_eclipse_project.sh  set_build_dir.sh
cmake/: cmake_defines.cmake  external_libraries.cmake
src/: ConfigParser.hpp  FPSDisplay.cpp  FPSDisplay.hpp  Game.cpp  Game.hpp  IDrawable.hpp  Player.cpp  Player.hpp  SFML_playground.cpp  main.cpp
src/commands/: CMakeLists.txt  Command.cpp  Command.hpp  CommandCategory.hpp  CommandQueue.cpp  CommandQueue.hpp
src/commands/tests/: CommandQueueTests.cpp  CommandTests.cpp
src/entities/: Aircraft.cpp  Aircraft.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  Landscape.cpp  Landscape.hpp  Layer.cpp  Layer.hpp  PlayerAircraft.cpp  PlayerAircraft.hpp  SceneNode.cpp  SceneNode.hpp  SpriteNode.cpp  SpriteNode.hpp  Stars.cpp  Stars.hpp
src/entities/tests/: EntityTests.cpp  LandscapeTests.cpp  PlayerAircraftTests.cpp  SceneNodeTests.cpp  StarsTests.cpp
src/game/: CMakeLists.txt  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Units.hpp  World.cpp  World.hpp
src/interface/: IUpdateable.hpp
src/resource_mgmt/: CMakeLists.txt  ResourceHolder.hpp  ResourceID.hpp
src/state_mgmt/: CMakeLists.txt  Context.cpp  Context.hpp  State.cpp  State.hpp  StateIdentifiers.hpp  StateStack.cpp  StateStack.hpp
src/utils/: CMakeLists.txt  Category.hpp  Command.cpp  Command.hpp  CommandCategory.hpp  CommandQueue.cpp  CommandQueue.hpp  ConfigParser.cpp  ConfigParser.hpp  Constants.hpp  Exception.cpp  Exception.hpp  FPS.cpp  FPS.hpp  Gason.cpp  NonCopyable.hpp  PeriodicTimer.cpp  PeriodicTimer.hpp  TypesAndTools.hpp  Units.hpp
src/utils/tests/: ConfigParserTests.cpp  FPSTests.cpp  PeriodicTimerTests.cpp  UnitsSystemTests.cpp  UnitsTests.cpp
uml/: visual_paradigm_project.vpp
(+6 files in other folders)
